--- a/src/app/components/common/navbar/navbar.html
+++ b/src/app/components/common/navbar/navbar.html
@@ -14,13 +14,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div uib-collapse="$ctrl.navCollapsed" class="collapse navbar-collapse" id="navbar-collapse-1">
             <ul class="nav navbar-nav navbar-left">
-                <li><a ui-sref="home">Home</a></li>
-                <li><a ui-sref="about">About</a></li>
-                <li><a ui-sref="theme">Theme Example</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li ng-show="!$ctrl.oAuthService.isLoggedIn()"><a ui-sref="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li ng-show="$ctrl.oAuthService.isLoggedIn()"><a ui-sref="logout"><span class="glyphicon glyphicon-log-in"></span> Hallo {{ $ctrl.oAuthService.getUsername() }} - Logout</a></li>
+                <li><a ui-sref="home">URL Shortener Service</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
