- Implement the vanity service on the frontend site for short links and include some plausibility checks before sending the request to the backend.

--- a/src/app/components/common/home/home.html
+++ b/src/app/components/common/home/home.html
@@ -7,7 +7,7 @@
         <h2>Shortlink erstellen</h2>
 
         <div class="form-group">
-            <input type="text" class="form-control" ng-model=$ctrl.urlToCreate
+            <input type="url" class="form-control" ng-model=$ctrl.urlToCreate
                    placeholder={{$ctrl.descriptionOfAction}}>
 
             <p></p>
@@ -19,16 +19,17 @@
 
         <p></p>
 
-        <div ng-show="$ctrl.id != null">
-            Der Shortlink ist: {{ $ctrl.baseRedirectUrl}}{{ $ctrl.id }}
+        <div ng-show="$ctrl.urlId != ''">
+            Der Shortlink ist: {{ $ctrl.baseRedirectUrl}}{{ $ctrl.urlId }}
         </div>
 
+        <p>&nbsp;</p>
 
         <h2>Shortlink löschen</h2>
 
         <div class="form-group">
-            <input type="text" class="form-control" ng-model=$ctrl.urlToDelete
-                   placeholder="Geben Sie hier den zu löschenden Shortlink ein">
+            <input type="url" class="form-control" ng-model=$ctrl.urlToDelete
+                   placeholder="Geben Sie hier den zu löschenden Shortlink ein.">
 
             <p></p>
 
@@ -41,6 +42,34 @@
 
         <div ng-show="$ctrl.deleted == true">
             Der Shortlink {{$ctrl.urlToDelete}} wurde gelöscht.
+        </div>
+
+        <p>&nbsp;</p>
+
+        <h2>Vanity URL Service</h2>
+        <div>Eine Vanity URL ist eine sprechende Internet-Adresse, die nicht aus kryptischen Zeichen, sondern
+            aus lesbaren Wörtern besteht.<br>
+            Beispiel für eine Vanity URL: {{$ctrl.baseRedirectUrl}}meineUrl
+        </div>
+        <p></p>
+        <input type="url" class="form-control" ng-model=$ctrl.urlToCreate
+               placeholder={{$ctrl.descriptionOfAction}}>
+        <input type="text" class="form-control" ng-model=$ctrl.txtIdForUrl
+               placeholder="Fügen Sie hier Ihren Text ein, um die Vanity URL mit Ihrem Text zu erstellen.">
+        <div ng-show="$ctrl.txtIdForUrl != ''">
+            Vorschau: {{$ctrl.baseRedirectUrl}}{{$ctrl.txtIdForUrl}}
+        </div>
+        <p></p>
+
+        <button type="button" class="btn btn-default tile" ng-click=$ctrl.createVanityUrl()>
+            <span>{{$ctrl.labelCreateButton}} (Vanity URL)</span>
+        </button>
+
+        <div ng-show=$ctrl.vanityUrlCreated>
+            Der Shortlink ist: {{ $ctrl.baseRedirectUrl}}{{ $ctrl.txtIdForUrl }}
+        </div>
+        <div ng-show="$ctrl.vanityUrlErrorMessage != null">
+            {{$ctrl.vanityUrlErrorMessage}}
         </div>
     </div>
 </main>
