--- a/src/app/components/common/home/home.html
+++ b/src/app/components/common/home/home.html
@@ -2,6 +2,7 @@
 <messages></messages>
 <main>
     <div class="container jumbotron">
+
         <h1>{{ $ctrl.title }}</h1>
 
         <div class="form-group">
@@ -13,15 +14,49 @@
 
             <p></p>
             <button type="button" class="btn btn-default" ng-click=$ctrl.switchVanityValue()>
-
-                <span ng-show=!$ctrl.showVanity>
-                    >
-                </span>
-                <span ng-show=$ctrl.showVanity>
-                    <
-                </span>
-
+                            <span ng-show=!$ctrl.showVanity>
+                                >
+                            </span>
+                            <span ng-show=$ctrl.showVanity>
+                                <
+                            </span>
             </button>
+
+            <p></p>
+
+            <div class="input-group" ng-show="$ctrl.urlId != '' && !$ctrl.showVanity">
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-block" clipboard
+                            text="$ctrl.baseRedirectUrl + $ctrl.urlId">
+                        Shortlink kopieren
+                    </button>
+                </span>
+                <input class="form-control" type="url" value="{{ $ctrl.baseRedirectUrl}}{{ $ctrl.urlId }}" title="Shortlink">
+            </div>
+
+            <div class="input-group" ng-show="$ctrl.vanityUrlCreated && $ctrl.showVanity">
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-block" clipboard
+                            text="$ctrl.baseRedirectUrl + $ctrl.txtIdForUrl">
+                        Shortlink kopieren
+                    </button>
+                </span>
+                <input class="form-control" type="url"
+                       value="{{ $ctrl.baseRedirectUrl }}{{ $ctrl.txtIdForUrl }}" title="Shortlink">
+            </div>
+
+            <div ng-show="$ctrl.deleted == true">
+                Der Shortlink {{ $ctrl.urlToDelete }} wurde gelöscht.
+            </div>
+
+            <div ng-show="$ctrl.txtIdForUrl != '' && $ctrl.showVanity && !$ctrl.vanityUrlCreated">
+                Vorschau: {{ $ctrl.baseRedirectUrl }}{{ $ctrl.txtIdForUrl }}
+            </div>
+
+            <div ng-show="$ctrl.vanityUrlErrorMessage != null && $ctrl.showVanity && !$ctrl.vanityUrlCreated">
+                {{ $ctrl.vanityUrlErrorMessage }}
+            </div>
+
             <p></p>
 
             <button ng-show=!$ctrl.showVanity type="button" class="btn btn-default tile"
@@ -37,34 +72,13 @@
             <button type="button" class="btn btn-default tile" ng-click=$ctrl.deleteShortlink()>
                 <span>Shortlink löschen</span>
             </button>
-
-            <div ng-show="$ctrl.urlId != '' && !$ctrl.showVanity">
-                Der Shortlink ist: {{ $ctrl.baseRedirectUrl}}{{ $ctrl.urlId }}
-            </div>
-
-            <div ng-show="$ctrl.deleted == true">
-                Der Shortlink {{ $ctrl.urlToDelete }} wurde gelöscht.
-            </div>
-
-            <div ng-show="$ctrl.txtIdForUrl != '' && $ctrl.showVanity">
-                Vorschau: {{ $ctrl.baseRedirectUrl }}{{ $ctrl.txtIdForUrl }}
-            </div>
-
-            <div ng-show="$ctrl.vanityUrlCreated && $ctrl.showVanity">
-                Der Shortlink ist: {{ $ctrl.baseRedirectUrl }}{{ $ctrl.txtIdForUrl }}
-            </div>
-
-            <div ng-show="$ctrl.vanityUrlErrorMessage != null && $ctrl.showVanity">
-                {{ $ctrl.vanityUrlErrorMessage }}
-            </div>
         </div>
 
         <p></p>
 
         <h2 ng-show=$ctrl.showVanity>Vanity URL Service</h2>
         <div ng-show=$ctrl.showVanity>Eine Vanity URL ist eine sprechende Internet-Adresse, die nicht aus
-            kryptischen Zeichen, sondern
-            aus lesbaren Wörtern besteht.<br>
+            kryptischen Zeichen, sondern aus lesbaren Wörtern besteht.<br>
             Beispiel für eine Vanity URL: {{$ctrl.baseRedirectUrl}}meineUrl
         </div>
     </div>
